[project]
name = "mysql-visual-explain-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Leon Yu",email = "leon@leonyu.net"}
]
license = "GPL-2.0-only"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairocffi (>=1.7.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]
